   > Dispell: Magic @ L15
   > Group Heal: Magic @ L20
   > Curify: Magic @ L22
   > [P] Clear Mind: Passive @ L23
   > Resurgence: Magic @ L25
  ~ Player 4, 3 skills:
   > Focus Up: Special @ L22
   > [P] Sharp Eye: Passive @ L24
   > [P] Masterful: Passive @ L25
  ~ Equipment, 4 skills:
   > Dark Orb: Tome
   > Soul Shackles: Tome
   > Wyvern's Fury: Weapon, Tome
   > Ice II: Tome
 - Added 115 new items:
  ~ 12 recovery/buff items:
   > Offense Combination
   > Defense Combination
   > Well-Rounded Combination
   > Large Potion
   > Large Elixir
   > Large Ether
   > Water Jug
   > Dispel Potion
   > Stimulant
   > Thick-Skinned Herb
   > Vicious Herb
   > Fire Resistance Potion
  ~ 12 foodstuffs:
   > Olive Oil
   > Tomato
   > Dragonfruit
   > Starfruit
   > Processed Oats
   > Mana Fritters
   > Seafood Dinner
   > Fancy Stew
   > Carrot Seeds
   > Wheat Seeds
   > Oat Seeds
   > Tomato Seeds
  ~ 40 materials:
   > Plant Essence
   > Metal Essence
   > Coal
   > Fiery Powder
   > Malicious Essence
   > Shadowspec Ingot
   > Blank Tome
   > Feral Bat Wing
   > Turtle Scute
   > Medicinal Herb
   > Medicinal Root
   > Raw Truffle
   > Web Ball
   > Tarantula Silk
   > Vial of Poison
   > Petrified Wood
   > Dragon Scale
   > Enchanted Dragon Scale
   > Forest Core
   > Wind Catalyst
   > Icy Gel
   > Ice Cube
   > Frozen Jewel
   > Frozen Core
   > Gazer Goop
   > Stinger
   > Feral Rat Fur
   > Ectoblood
   > Ectoplasm
   > Fiery Blood
   > Rotten Flesh
   > Tellurium Dust
   > Tellurium Alloy
   > Life Crystal
   > Mana Crystal
   > Mysterious Yellow Badge
   > Knight Token
   > Mage Token
   > Cleric Token
   > Rogue Token
  ~ 13 upgraders:
   > STR Scroll ★
   > SPI Scroll ★
   > END Scroll ★
   > RES Scroll ★
   > EVA Scroll
   > PDR Scroll
   > MDR Scroll
   > GRD Scroll
   > HRG Scroll
   > MRG Scroll
   > EXR Scroll
   > MCR Scroll
   > INT Scroll
  ~ 8 fishing related items:
   > Flimsy Rod
   > Basic Rod
   > Reinforced Rod
   > Worm
   > Fathead Carp