@@ -1675,7 +1675,7 @@
   {
     "id": 59,
     "animationId": 0,
-    "consumable": true,
+    "consumable": false,
     "damage": {
       "critical": false,
       "elementId": 0,
@@ -1683,17 +1683,17 @@
       "type": 0,
       "variance": 20
     },
-    "description": "",
+    "description": "Trick or treat! Used to purchase special equipment\nfrom the spooky merchant during the spooky season.",
     "effects": [],
     "hitType": 0,
-    "iconIndex": 0,
-    "itypeId": 1,
-    "name": "",
-    "note": "Was once the Pot with Seed.\nWas once the CASTLE FORGE RECIPES.",
-    "occasion": 0,
+    "iconIndex": 1963,
+    "itypeId": 2,
+    "name": "Pumpkin",
+    "note": "<Sell Price: 10>\n\nWas once the Pot with Seed.\nWas once the CASTLE FORGE RECIPES.",
+    "occasion": 3,
     "price": 0,
     "repeats": 1,
-    "scope": 7,
+    "scope": 0,
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
