@@ -62,7 +62,7 @@ Additions:
    > Soul Shackles: Tome
    > Wyvern's Fury: Weapon, Tome
    > Ice II: Tome
- - Added 115 new items:
+ - Added 116 new items:
   ~ 12 recovery/buff items:
    > Offense Combination
    > Defense Combination
@@ -153,7 +153,8 @@ Additions:
    > Whiskerfish
    > Northern Redbelly Dace
    > Blue Crab
-  ~ 30 miscellaneous items:
+  ~ 31 miscellaneous items:
+   > Pumpkin
    > Map of Telluria
    > Phantasmal Charm
    > Advanced Salvage Kit
